--- a/public/homepageStyle.css
+++ b/public/homepageStyle.css
@@ -4,8 +4,11 @@ html {
     height: 100%;
 }
 
-body{
-    font-family: "Roboto", sans-serif;
+body,
+h1,
+h2{
+    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 600;
 }
 
 .intro-header {
@@ -15,6 +18,12 @@ body{
     color: #f8f8f8;
     background: url("img/bg.jpg") no-repeat center center;
     background-size: cover;
+}
+
+.intro-message {
+    position: relative;
+    padding-top: 20%;
+    padding-bottom: 20%;
 }
 
 .intro-message > h1 {
@@ -27,17 +36,39 @@ body{
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
 }
 
-
-.intro-message {
-    position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
-}
-
-
-
 .intro-divider {
     width: 400px;
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+
+@media(max-width:767px) {
+    .intro-message {
+        padding-bottom: 15%;
+    }
+
+    .intro-message > h1 {
+        font-size: 3em;
+    }
+
+    ul.intro-social-buttons > li {
+        display: block;
+        margin-bottom: 20px;
+        padding: 0;
+    }
+
+    ul.intro-social-buttons > li:last-child {
+        margin-bottom: 0;
+    }
+
+    .intro-divider {
+        width: 100%;
+    }
+}
+
+.network-name {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 2px;
 }
