--- a/public/homepageStyle.css
+++ b/public/homepageStyle.css
@@ -16,7 +16,8 @@ h2{
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url("img/bg.jpg") no-repeat center center;
+    /*background: url("img/bg.jpg") no-repeat center center;*/
+    background-color: #1A2E7E;
     background-size: cover;
 }
 
