--- a/public/assignment/views/admin/admin.view.html
+++ b/public/assignment/views/admin/admin.view.html
@@ -15,7 +15,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="../style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="home.html">Form Maker</a>
+            <a class="navbar-brand" href="../home/home.view.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -48,16 +48,16 @@
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="../home/home.view.html">Home</a>
                 </li>
                 <li>
-                    <a href="profile.html">Profile</a>
+                    <a href="../users/profile.view.html">Profile</a>
                 </li>
                 <li class="active">
-                    <a href="admin.html">Admin</a>
+                    <a href="admin.view.html">Admin</a>
                 </li>
                 <li>
-                    <a href="forms.html">Forms</a>
+                    <a href="../forms/forms.view.html">Forms</a>
                 </li>
             </ul>
         </div>
