--- a/public/assignment/views/home/home.view.html
+++ b/public/assignment/views/home/home.view.html
@@ -15,7 +15,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="../style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,12 +29,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="home.html">Form Maker</a>
+            <a class="navbar-brand" href="#">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="register.html">Register</a></li>
-                <li><a href="login.html">Login</a></li>
+                <li><a href="../users/register.view.html">Register</a></li>
+                <li><a href="../users/login.view.html">Login</a></li>
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
@@ -49,45 +49,31 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li>
-                    <a href="home.html">Home</a>
+                <li class="active">
+                    <a href="home.view.html">Home</a>
                 </li>
                 <li>
-                    <a href="profile.html">Profile</a>
+                    <a href="../users/profile.view.html">Profile</a>
                 </li>
                 <li>
-                    <a href="admin.html">Admin</a>
+                    <a href="../admin/admin.view.html">Admin</a>
                 </li>
                 <li>
-                    <a href="forms.html">Forms</a>
+                    <a href="../forms/forms.view.html">Forms</a>
                 </li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Register</h1>
-            <div>
-            <form action="profile.html">
-                <div class="form-group">
-                    <label for="usrnm" class="control-label">Username</label>
-                    <input type="text" class="form-control" id="usrnm" placeholder="Username">
-                </div>
-                <div class="form-group">
-                    <label for="pass1" class="control-label">Password</label>
-                    <input type="password" class="form-control" id="pass1" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <label for="pass2" class="control-label">Verify Password</label>
-                        <input type="password" class="form-control" id="pass2" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <label for="email" class="control-label">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-default btn-block">Register</button>
-                </div>
-            </form>
-            </div>
+            <h1 class="page-header">Welcome!</h1>
+            <p >
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                mollit anim id est laborum.
+            </p>
+
         </div>
     </div>
 </div>
