--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -15,7 +15,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="../style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="home.html">Form Maker</a>
+            <a class="navbar-brand" href="../home/home.view.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -48,22 +48,22 @@
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="../home/home.view.html">Home</a>
+                </li>
+                <li class="active">
+                    <a href="profile.view.html">Profile</a>
                 </li>
                 <li>
-                    <a href="profile.html">Profile</a>
+                    <a href="../admin/admin.view.html">Admin</a>
                 </li>
                 <li>
-                    <a href="admin.html">Admin</a>
-                </li>
-                <li>
-                    <a href="forms.html">Forms</a>
+                    <a href="../forms/forms.view.html">Forms</a>
                 </li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Login</h1>
-            <form action="profile.html">
+            <h1 class="page-header">Profile</h1>
+            <form action="profile.view.html">
                 <div class="form-group">
                     <label for="username" class="control-label">Username</label>
                     <input type="text" class="form-control" id="username" placeholder="Username">
@@ -73,7 +73,19 @@
                     <input type="password" class="form-control" id="pass" placeholder="Password">
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default btn-block">Login</button>
+                    <label for="fname" class="control-label">First Name</label>
+                    <input type="text" class="form-control" id="fname" placeholder="First Name">
+                </div>
+                <div class="form-group">
+                    <label for="lname" class="control-label">Last Name</label>
+                    <input type="text" class="form-control" id="lname" placeholder="Last Name">
+                </div>
+                <div class="form-group">
+                    <label for="email" class="control-label">Email</label>
+                    <input type="email" class="form-control" id="email" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-default btn-block">Update</button>
                 </div>
             </form>
         </div>
