--- a/public/homepageStyle.css
+++ b/public/homepageStyle.css
@@ -17,7 +17,7 @@ h2{
     text-align: center;
     color: #f8f8f8;
     /*background: url("img/bg.jpg") no-repeat center center;*/
-    background-color: #1A2E7E;
+    background-color: #05223F;
     background-size: cover;
 }
 
