--- a/public/assignment/views/sidebar/sidebar.view.html
+++ b/public/assignment/views/sidebar/sidebar.view.html
@@ -1,29 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-3 col-md-2 sidebar">
-            <ul class="nav nav-sidebar">
-                <li class="active">
-                    <a href="../home/home.view.html">Home</a>
-                </li>
-                <li>
-                    <a href="../users/profile.view.html">Profile</a>
-                </li>
-                <li>
-                    <a href="../admin/admin.view.html">Admin</a>
-                </li>
-                <li>
-                    <a href="../forms/forms.view.html">Forms</a>
-                </li>
-            </ul>
-        </div>
+<div class="row">
+    <div class="col-sm-3 col-md-2 sidebar">
+        <ul class="nav nav-sidebar">
+            <li class="active">
+                <a href="#/home">Home</a>
+            </li>
+            <li>
+                <a href="#/profile">Profile</a>
+            </li>
+            <li>
+                <a href="#/admin">Admin</a>
+            </li>
+            <li>
+                <a href="#/form">Forms</a>
+            </li>
+        </ul>
     </div>
 </div>
-</body>
-</html>
