--- a/public/assignment/views/forms/form-fields.view.html
+++ b/public/assignment/views/forms/form-fields.view.html
@@ -2,8 +2,8 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-8 col-md-offset-2 main">
     <h2>Forms: Registration</h2>
     <ul class="nav nav-tabs">
-        <li role="presentation"><a href="forms.view.html">Forms</a></li>
-        <li role="presentation" class="active"><a href="form-fields.view.html">Fields</a></li>
+        <li role="presentation"><a href="#/forms">Forms</a></li>
+        <li role="presentation" class="active"><a href="#/formfields">Fields</a></li>
     </ul>
     <div id="formField">
         <form>
