--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -4,7 +4,7 @@
     <h2>Forms</h2>
     <ul class="nav nav-tabs">
         <li role="presentation" class="active"><a href="forms.view.html">Forms</a></li>
-        <li role="presentation"><a href="#/formfield">Fields</a></li>
+        <li role="presentation"><a href="#/formfields">Fields</a></li>
     </ul>
     <div class="table-responsive">
         <table class="table table-striped">
