all pages to angular except formfields

--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -15,48 +15,26 @@
                 <th>&nbsp;</th>
             </tr>
             <tr>
-                <td><input class="form-control" type="text" name="username" placeholder="name"/></td>
+                <td><input ng-model="newForm.name" class="form-control" type="text" name="username" placeholder="name"/></td>
                 <td style="white-space: nowrap">
-                    <a href="#" class="btn btn-success">
-                        <scan class="glyphicon glyphicon-ok"></scan>
-                    </a>
-                    <a href="#" class="btn btn-primary">
+                    <a href="#" ng-click="addForm()" class="btn btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
+                    </a>
+                    <a href="#" ng-click="updateForm(newForm)" class="btn btn-warning">
+                        <scan class="glyphicon glyphicon-ok"></scan>
                     </a>
                 </td>
             </tr>
             </thead>
             <tbody>
-            <tr>
-                <td><a href="form-fields.view.html"/> Registration Form</td>
+            <tr ng-repeat="form in $scope.forms" ng-class="{'success' : $index == selectedFormIndex}">
+                <td><a href="form-fields.view.html"/> {{form.title}}</td>
                 <td>
-                    <a href="#" class="btn btn-warning">
-                        <scan class="glyphicon glyphicon-pencil"></scan>
-                    </a>
-                    <a href="#" class="btn btn-danger">
+                    <a href="#"  ng-click="deleteForm()" class="btn btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="form-fields.view.html"/>Contact List</td>
-                <td>
-                    <a href="#" class="btn btn-warning">
+                    <a href="#" ng-click="selectForm($index)" class="btn btn-primary">
                         <scan class="glyphicon glyphicon-pencil"></scan>
-                    </a>
-                    <a href="#" class="btn btn-danger">
-                        <scan class="glyphicon glyphicon-remove"></scan>
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td><a href="form-fields.view.html"/>To Do List</td>
-                <td>
-                    <a href="#" class="btn btn-warning">
-                        <scan class="glyphicon glyphicon-pencil"></scan>
-                    </a>
-                    <a href="#" class="btn btn-danger">
-                        <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
                 </td>
             </tr>
