--- a/public/assignment/views/forms/form-fields.view.html
+++ b/public/assignment/views/forms/form-fields.view.html
@@ -10,7 +10,7 @@
             <label for="firstNm">First Name:</label>
             <div class="row form-group">
                 <div class="col-xs-6">
-                    <input type="text" class="form-control" id="firstNm" placeholder="First Name">
+                    <input type="text" ng-model="form.firstname" class="form-control" id="firstNm" placeholder="First Name">
                 </div>
                 <div class="col-xs-6">
                     <a href="#" class="btn btn-sm btn-primary">
@@ -31,7 +31,7 @@
             <label for="lastNm">Last Name:</label>
             <div class="row form-group">
                 <div class="col-xs-6">
-                    <input type="text" class="form-control" id="lastNm" placeholder="Last Name">
+                    <input type="text" ng-model="form.lastname" class="form-control" id="lastNm" placeholder="Last Name">
                 </div>
                 <div class="col-xs-6">
                     <a href="#" class="btn btn-sm btn-primary">
@@ -52,7 +52,7 @@
             <label for="dob">Date of Birth:</label>
             <div class="row form-group">
                 <div class="col-xs-6">
-                    <input type="date" class="form-control" id="dob" placeholder="Date of Birth">
+                    <input type="date" ng-model="form.dob" class="form-control" id="dob" placeholder="Date of Birth">
                 </div>
                 <div class="col-xs-6">
                     <a href="#" class="btn btn-sm btn-primary">
@@ -73,7 +73,7 @@
             <label for="gender">Gender:</label>
             <div class="row form-group">
                 <div class="col-xs-6">
-                    <select class="form-control" id="gender">
+                    <select ng-model="form.gender" class="form-control" id="gender">
                         <option>Male</option>
                         <option>Female</option>
                     </select>
