--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -4,14 +4,14 @@
     <form action="profile.view.html">
         <div class="form-group">
             <label for="username" class="control-label">Username</label>
-            <input type="text" class="form-control" id="username" placeholder="Username">
+            <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username">
         </div>
         <div class="form-group">
-            <label for="pass" class="control-label">Password</label>
+            <label for="pass" ng-model="user.password" class="control-label">Password</label>
             <input type="password" class="form-control" id="pass" placeholder="Password">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-default btn-block">Login</button>
+            <button ng-click="login()" class="btn btn-default btn-block">Login</button>
         </div>
     </form>
 </div>
