--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -4,26 +4,26 @@
     <form action="profile.view.html">
         <div class="form-group">
             <label for="username" class="control-label">Username</label>
-            <input type="text" class="form-control" id="username" placeholder="Username">
+            <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username">
         </div>
         <div class="form-group">
             <label for="pass" class="control-label">Password</label>
-            <input type="password" class="form-control" id="pass" placeholder="Password">
+            <input type="password" ng-model="user.password" class="form-control" id="pass" placeholder="Password">
         </div>
         <div class="form-group">
             <label for="fname" class="control-label">First Name</label>
-            <input type="text" class="form-control" id="fname" placeholder="First Name">
+            <input type="text" ng-model="user.firstname" class="form-control" id="fname" placeholder="First Name">
         </div>
         <div class="form-group">
             <label for="lname" class="control-label">Last Name</label>
-            <input type="text" class="form-control" id="lname" placeholder="Last Name">
+            <input type="text" ng-model="user.lastname" class="form-control" id="lname" placeholder="Last Name">
         </div>
         <div class="form-group">
             <label for="email" class="control-label">Email</label>
-            <input type="email" class="form-control" id="email" placeholder="Email">
+            <input type="email" ng-model="user.email" class="form-control" id="email" placeholder="Email">
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-default btn-block">Update</button>
+            <button ng-click="update()" class="btn btn-default btn-block">Update</button>
         </div>
     </form>
 </div>
