--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -27,8 +27,8 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="form in $scope.forms" ng-class="{'success' : $index == selectedFormIndex}">
-                <td><a href="form-fields.view.html"/> {{form.title}}</td>
+            <tr ng-repeat="form in userForms">
+                <td><a href="form-fields.view.html"/>{{form.title}}</td>
                 <td>
                     <a href="#"  ng-click="deleteForm()" class="btn btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
