--- a/public/assignment/views/users/login.view.html
+++ b/public/assignment/views/users/login.view.html
@@ -1,17 +1,17 @@
 
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h1 class="page-header">Login</h1>
-    <form action="profile.view.html">
+    <form>
         <div class="form-group">
             <label for="username" class="control-label">Username</label>
             <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username">
         </div>
         <div class="form-group">
-            <label for="pass" ng-model="user.password" class="control-label">Password</label>
-            <input type="password" class="form-control" id="pass" placeholder="Password">
+            <label for="pass"  class="control-label">Password</label>
+            <input type="password" ng-model="user.password" class="form-control" id="pass" placeholder="Password">
         </div>
         <div class="form-group">
-            <button ng-click="login()" class="btn btn-default btn-block">Login</button>
+            <button ng-click="login(user)" class="btn btn-default btn-block">Login</button>
         </div>
     </form>
 </div>
