login and forms working

--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -17,7 +17,7 @@
             <tr>
                 <td><input ng-model="newForm.name" class="form-control" type="text" name="username" placeholder="name"/></td>
                 <td style="white-space: nowrap">
-                    <a href="#" ng-click="addForm()" class="btn btn-success">
+                    <a href="#" ng-click="addForm(newForm)" class="btn btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
                     <a href="#" ng-click="updateForm(newForm)" class="btn btn-warning">
