--- a/public/assignment/views/forms/forms.view.html
+++ b/public/assignment/views/forms/forms.view.html
@@ -17,10 +17,10 @@
             <tr>
                 <td><input ng-model="newForm.name" class="form-control" type="text" name="username" placeholder="name"/></td>
                 <td style="white-space: nowrap">
-                    <a href="#" ng-click="addForm(newForm)" class="btn btn-success">
+                    <a ng-click="addForm(newForm)" class="btn btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
                     </a>
-                    <a href="#" ng-click="updateForm(newForm)" class="btn btn-warning">
+                    <a ng-click="updateForm(newForm)" class="btn btn-warning">
                         <scan class="glyphicon glyphicon-ok"></scan>
                     </a>
                 </td>
@@ -30,10 +30,10 @@
             <tr ng-repeat="form in userForms">
                 <td><a href="form-fields.view.html"/>{{form.title}}</td>
                 <td>
-                    <a href="#"  ng-click="deleteForm()" class="btn btn-danger">
+                    <a ng-click="deleteForm()" class="btn btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
                     </a>
-                    <a href="#" ng-click="selectForm($index)" class="btn btn-primary">
+                    <a ng-click="selectForm(form)" class="btn btn-primary">
                         <scan class="glyphicon glyphicon-pencil"></scan>
                     </a>
                 </td>
