--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -13,8 +13,8 @@
             <ul class="nav navbar-nav navbar-right">
                 <li ng-hide="currentUser"><a href="#/register">Register</a></li>
                 <li ng-hide="currentUser"><a href="#/login">Login</a></li>
-                <li ng-hide="!currentUser"><a href="#">Username</a></li>
-                <li ng-hide="!currentUser"><a href="#">Logout</a></li>
+                <li ng-hide="!currentUser"><a href="#profile">{{currentUser.username}}</a></li>
+                <li ng-click="logout()" ng-hide="!currentUser"><a>Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
                 <input type="text" class="form-control" placeholder="Search...">
