--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -1,7 +1,7 @@
 
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h1 class="page-header">Profile</h1>
-    <form action="profile.view.html">
+    <form>
         <div class="form-group">
             <label for="username" class="control-label">Username</label>
             <input type="text" ng-model="user.username" class="form-control" id="username" placeholder="Username">
@@ -23,7 +23,7 @@
             <input type="email" ng-model="user.email" class="form-control" id="email" placeholder="Email">
         </div>
         <div class="form-group">
-            <button ng-click="update()" class="btn btn-default btn-block">Update</button>
+            <button ng-click="update(user)" class="btn btn-default btn-block">Update</button>
         </div>
     </form>
 </div>
