--- a/public/assignment/views/users/register.view.html
+++ b/public/assignment/views/users/register.view.html
@@ -2,22 +2,22 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h1 class="page-header">Register</h1>
     <div>
-        <form action="profile.view.html">
+        <form>
             <div class="form-group">
                 <label for="usrnm" class="control-label">Username</label>
-                <input ng-model="user.ipUsername" type="text" class="form-control" id="usrnm" placeholder="Username">
+                <input ng-model="user.username" type="text" class="form-control" id="usrnm" placeholder="Username">
             </div>
             <div class="form-group">
                 <label for="pass1" class="control-label">Password</label>
-                <input ng-model="user.ipPassword" type="password" class="form-control" id="pass1" placeholder="Password">
+                <input ng-model="user.password" type="password" class="form-control" id="pass1" placeholder="Password">
             </div>
             <div class="form-group">
                 <label for="pass2" class="control-label">Verify Password</label>
-                <input ng-model="user.ipVerifyPassword" type="password" class="form-control" id="pass2" placeholder="Password">
+                <input ng-model="user.verifyPassword" type="password" class="form-control" id="pass2" placeholder="Password">
             </div>
             <div class="form-group">
                 <label for="email" class="control-label">Email</label>
-                <input ng-model="user.ipEmail" type="email" class="form-control" id="email" placeholder="Email">
+                <input ng-model="user.email" type="email" class="form-control" id="email" placeholder="Email">
             </div>
             <div class="form-group">
                 <button ng-click="register(user)" class="btn btn-default btn-block">Register</button>
