--- a/public/assignment/views/header/header.view.html
+++ b/public/assignment/views/header/header.view.html
@@ -13,7 +13,8 @@
             <ul class="nav navbar-nav navbar-right">
                 <li ng-hide="currentUser"><a href="#/register">Register</a></li>
                 <li ng-hide="currentUser"><a href="#/login">Login</a></li>
-                <li ng-hide="!currentUser"><a href="#profile">{{currentUser.username}}</a></li>
+                <li ng-hide="!currentUser"><a href="#/profile">{{currentUser.username}}</a></li>
+                <li ng-show="currentUser.roles.indexOf('admin') > -1"><a href="#/admin">admin</a></li>
                 <li ng-click="logout()" ng-hide="!currentUser"><a>Logout</a></li>
             </ul>
             <form class="navbar-form navbar-right">
