--- a/public/assignment/views/sidebar/sidebar.view.html
+++ b/public/assignment/views/sidebar/sidebar.view.html
@@ -1,16 +1,16 @@
 <div class="row">
     <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-sidebar">
-            <li ng-class="{'active': $location.url() == '/'}">
+            <li ng-class="{'active': $location.url() == '/home'}">
                 <a href="#/home">Home</a>
             </li>
-            <li ng-class="{'active': $location.url() == '/profile'}">
+            <li ng-show="currentUser" ng-class="{'active': $location.url() == '/profile'}">
                 <a href="#/profile">Profile</a>
             </li>
-            <li ng-class="{'active': $location.url() == '/admin'}">
+            <li ng-show= "currentUser.roles.indexOf('admin') > -1" ng-class="{'active': $location.url() == '/admin'}">
                 <a href="#/admin">Admin</a>
             </li>
-            <li ng-class="{'active': $location.url() == '/forms'}">
+            <li ng-show="currentUser" ng-class="{'active': $location.url() == '/forms'}">
                 <a href="#/forms">Forms</a>
             </li>
         </ul>
