--- a/public/assignment/views/users/profile.view.html
+++ b/public/assignment/views/users/profile.view.html
@@ -19,7 +19,7 @@
             <input type="text" ng-model="user.lastname" class="form-control" id="lname" placeholder="Last Name">
         </div>
         <div class="form-group">
-            <label for="email" class="control-label">Email</label>
+            <label f`or="email" class="control-label">Email</label>
             <input type="email" ng-model="user.email" class="form-control" id="email" placeholder="Email">
         </div>
         <div class="form-group">
