--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -10,8 +10,8 @@
         <table class="table table-striped">
             <thead>
             <tr>
-                <th><a href="#" class="glyphicon glyphicon-triangle-bottom sortIcon"></a>Form Name</th>
-                <th><a href="#" class="glyphicon glyphicon-triangle-bottom sortIcon"></a>Action</th>
+                <th><span class="glyphicon glyphicon-triangle-bottom sortIcon"></span>Form Name</th>
+                <th><span class="glyphicon glyphicon-triangle-bottom sortIcon"></span>Action</th>
                 <th>&nbsp;</th>
             </tr>
             <tr>
