--- a/public/assignment/client/views/forms/forms.view.html
+++ b/public/assignment/client/views/forms/forms.view.html
@@ -3,8 +3,8 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
     <h2>Forms</h2>
     <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="forms.view.html">Forms</a></li>
-        <li role="presentation"><a href="#/formfields">Fields</a></li>
+        <li role="presentation" class="active"><a href="/forms">Forms</a></li>
+        <li role="presentation"><a href="/fields">Fields</a></li>
     </ul>
     <div class="table-responsive">
         <table class="table table-striped">
@@ -28,7 +28,7 @@
             </thead>
             <tbody>
             <tr ng-repeat="form in userForms">
-                <td><a href="form-fields.view.html"/>{{form.title}}</td>
+                <td><a href="" ng-click="formFields(form)">{{form.title}}</a></td>
                 <td>
                     <a ng-click="deleteForm(form)" class="btn btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
