--- a/public/assignment/client/views/header/header.view.html
+++ b/public/assignment/client/views/header/header.view.html
@@ -17,9 +17,9 @@
                 <li ng-show="currentUser.roles.indexOf('admin') > -1"><a href="#/admin">admin</a></li>
                 <li ng-click="logout()" ng-hide="!currentUser"><a>Logout</a></li>
             </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
+            <!--<form class="navbar-form navbar-right">-->
+                <!--<input type="text" class="form-control" placeholder="Search...">-->
+            <!--</form>-->
         </div>
     </div>
 </nav>
