project server changes

--- a/public/project/client/css/style.css
+++ b/public/project/client/css/style.css
@@ -11,6 +11,14 @@
     width: auto;
 }
 
+.profile-pic-css{
+
+}
+
+.padding{
+    padding-top: 3em;
+}
+
 .form-card{
     padding: 2% 2% 2% 2%;
     background: #F8F8F8;
