--- a/public/project/client/views/tutorial/tutorial.view.html
+++ b/public/project/client/views/tutorial/tutorial.view.html
@@ -1,38 +1,43 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="screen">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                <div class="well-lg">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.?</p>
-                    <p><i> Aenean molestie tellus quis lacinia auctor. Suspendisse interdum vitae nisi a pharetra.
-                        Nullam vitae enim eu tortor pellentesque dapibus id euismod mauris. Quisque id risus sit amet
-                        lectus vehicula rhoncus id sit amet velit. Fusce molestie ultrices sem, quis maximus lorem
-                        ultrices vitae. Morbi molestie ultrices quam, pretium egestas massa blandit convallis. Ut
-                        tempor sagittis ante et mollis. Praesent et malesuada urna. In in convallis mi. Pellentesque
-                        scelerisque purus vel porttitor rhoncus. Curabitur vel magna rhoncus, placerat augue quis,
-                        pretium turpis. Cras vitae facilisis velit. Integer sed porttitor augue.
-                    </i></p>
-                </div>
-                <button class="btn btn-default col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-2">Hints
-                </button>
+        <div ng-controller="TutorialController">
+        <!--<input ng-model="userCode.data" class="form-control" />-->
+            <textarea id="inputCode" class="form-control" ng-model="userCode.data"></textarea>
+            <button ng-click="run(userCode)" class="btn btn-primary">Run</button>
             </div>
-            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-                <div class="thumbnail">
-                    <img ng-src="images/placeholder.jpg" alt="Placeholder">
-                    <div class="caption">
-                        <h3>Write your code here:</h3>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <div class="row">
-                            <p class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="#" class="btn btn-default"
-                                                                              role="button">Run Code</a></p>
-                            <p><a href="#" class="btn btn-success" role="button">Submit Code</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <!--<div class="screen">-->
+            <!--<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">-->
+                <!--<div class="well-lg">-->
+                    <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.?</p>-->
+                    <!--<p><i> Aenean molestie tellus quis lacinia auctor. Suspendisse interdum vitae nisi a pharetra.-->
+                        <!--Nullam vitae enim eu tortor pellentesque dapibus id euismod mauris. Quisque id risus sit amet-->
+                        <!--lectus vehicula rhoncus id sit amet velit. Fusce molestie ultrices sem, quis maximus lorem-->
+                        <!--ultrices vitae. Morbi molestie ultrices quam, pretium egestas massa blandit convallis. Ut-->
+                        <!--tempor sagittis ante et mollis. Praesent et malesuada urna. In in convallis mi. Pellentesque-->
+                        <!--scelerisque purus vel porttitor rhoncus. Curabitur vel magna rhoncus, placerat augue quis,-->
+                        <!--pretium turpis. Cras vitae facilisis velit. Integer sed porttitor augue.-->
+                    <!--</i></p>-->
+                <!--</div>-->
+                <!--<button class="btn btn-default col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-2">Hints-->
+                <!--</button>-->
+            <!--</div>-->
+            <!--<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">-->
+                <!--<div class="thumbnail">-->
+                    <!--<img ng-src="images/placeholder.jpg" alt="Placeholder">-->
+                    <!--<div class="caption">-->
+                        <!--<h3>Write your code here:</h3>-->
+                        <!--<br>-->
+                        <!--<br>-->
+                        <!--<br>-->
+                        <!--<br>-->
+                        <!--<div class="row">-->
+                            <!--<p class="col-lg-2 col-md-2 col-sm-2 col-xs-6"><a href="#" class="btn btn-default"-->
+                                                                              <!--role="button">Run Code</a></p>-->
+                            <!--<p><a href="#" class="btn btn-success" role="button">Submit Code</a></p>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
     </div>
