--- a/public/project/client/views/user/profile/profile.view.html
+++ b/public/project/client/views/user/profile/profile.view.html
@@ -6,11 +6,20 @@
                 <div>
                     <h2>Welcome {{username}}</h2>
                 </div>
-                <div>
-                    <img class="wrapImage" src="http://placehold.it/140x140">
+                <div class="profile-pic-css">
+                    <!--<img class="wrapImage" src="http://placehold.it/140x140">-->
+                    <img class="img-responsive img-rounded" ng-src="{{currentUser.photo}}">
                 </div>
                 <div>
-                    <h3>Latest Lesson: </h3>
+                    <div>
+                        <h3>Latest Lesson: </h3>
+                        <div ng-show="currentUser.tutorials.length == 0">
+                            <button class="btn btn-primary">Take first lesson</button>
+                        </div>
+                        <div ng-show="currentUser.lastTutorial">
+                            <button class="btn btn-primary">{{currentUser.lastTutorial}}</button>
+                        </div>
+                    </div>
                     <h3>Activity: </h3>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                     incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -23,29 +32,34 @@
             <div class="panel panel-primary col-sm-5 box-profile">
                 <div>
                     <h2>Stats:</h2>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit anim id est laborum.
+                    <div>
+                        <p ng-show="currentUser.stats.length() == null"> none</p>
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-primary col-sm-5 box-profile">
+                <div>
+                    <h2>Achievements:</h2>
+                    <div>
+                        <p ng-show="currentUser.stats.length() == 0"> none</p>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-sm-12">
-            <div class="panel panel-primary col-sm-5 box-profile">
-                <div>
-                    <h2>Achievements:</h2>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit anim id est laborum.
-                </div>
-            </div>
-        </div>
+        <!--<div class="col-sm-12">-->
+            <!--<div class="panel panel-primary col-sm-5 box-profile">-->
+                <!--<div>-->
+                    <!--<h2>Achievements:</h2>-->
+                    <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor-->
+                    <!--incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud-->
+                    <!--exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure-->
+                    <!--dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.-->
+                    <!--Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt-->
+                    <!--mollit anim id est laborum.-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
     </div>
     </div>
