mongodb for forms and users

--- a/public/project/client/views/tutorial/tutorial.view.html
+++ b/public/project/client/views/tutorial/tutorial.view.html
@@ -1,10 +1,13 @@
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div ng-controller="TutorialController">
-        <!--<input ng-model="userCode.data" class="form-control" />-->
+            <!--<input ng-model="userCode.data" class="form-control" />-->
             <textarea id="inputCode" class="form-control" ng-model="userCode.data"></textarea>
             <button ng-click="run(userCode)" class="btn btn-primary">Run</button>
+            <div>
+                <textarea class="form-group" style="height: 300px; width: 300px" id="outputTextArea" ng-model="output"></textarea>
             </div>
+        </div>
         <!--<div class="screen">-->
             <!--<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">-->
                 <!--<div class="well-lg">-->
