--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -12,15 +12,15 @@
         </div>
         <div class="form-group">
             <label for="fname" class="control-label">First Name</label>
-            <input type="text" ng-model="user.firstname" class="form-control" id="fname" placeholder="First Name">
+            <input type="text" ng-model="user.firstName" class="form-control" id="fname" placeholder="First Name">
         </div>
         <div class="form-group">
             <label for="lname" class="control-label">Last Name</label>
-            <input type="text" ng-model="user.lastname" class="form-control" id="lname" placeholder="Last Name">
+            <input type="text" ng-model="user.lastName" class="form-control" id="lname" placeholder="Last Name">
         </div>
         <div class="form-group">
-            <label f`or="email" class="control-label">Email</label>
-            <input type="email" ng-model="user.email" class="form-control" id="email" placeholder="Email">
+            <label for="email" class="control-label">Email</label>
+            <input type="email" ng-model="user.emails[0]" class="form-control" id="email" placeholder="Email">
         </div>
         <div class="form-group">
             <button ng-click="update(user)" class="btn btn-default btn-block">Update</button>
