--- a/public/assignment/client/views/admin/admin.view.html
+++ b/public/assignment/client/views/admin/admin.view.html
@@ -14,7 +14,7 @@
                 </tr>
                 <tr>
                     <td><input class="form-control" type="text" ng-model="selectedUser.username" placeholder="Username"/></td>
-                    <td><input class="form-control" type="password" ng-model="selectedUser.password" placeholder="Password"/></td>
+                    <td><input class="form-control" disabled="disabled" type="password" placeholder="Password"/></td>
                     <td><input class="form-control" type="text" ng-model="selectedUser.firstName" placeholder="First Name"/></td>
                     <td><input class="form-control" type="text" ng-model="selectedUser.lastName" placeholder="Last Name"/></td>
                     <td><input class="form-control" type="text" ng-model="selectedUser.roles" placeholder="role1, role2"/></td>
