--- a/public/assignment/client/views/users/profile.view.html
+++ b/public/assignment/client/views/users/profile.view.html
@@ -8,7 +8,7 @@
         </div>
         <div class="form-group">
             <label for="pass" class="control-label">Password</label>
-            <input type="password" ng-model="user.password" class="form-control" id="pass" placeholder="Password">
+            <input type="password" ng-model="user.password" class="form-control" id="pass" placeholder="Type Password">
         </div>
         <div class="form-group">
             <label for="fname" class="control-label">First Name</label>
